# jabmpt-pp

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  bmp.cpp  main.cpp  types.hpp
src/images/: bmp.cpp  image.cpp  image.hpp  png.cpp
src/transform/: blackwhite.cpp  flip.cpp
src/transforms/: blackwhite.cpp  blur.cpp  channels.cpp  edgedetection.cpp  flip.cpp  invert.cpp  transformations.hpp
